<resources>
    <string name="app_name">WHOT</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="login_prompt_email">電子郵件</string>
    <string name="login_prompt_password">密碼</string>
    <string name="login_sign_in">登入</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">您輸入的電子郵件格式錯誤</string>
    <string name="error_invalid_password">您輸入的密碼過短</string>
    <string name="error_incorrect_password">您輸入的密碼錯誤</string>
    <string name="error_field_required">請輸入您的電子郵件</string>
    <string name="alert_back_click_twice">請再按一次返回鍵離開</string>
    <string name="alert_permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_test">TestActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>
    <!--facebook id , scheme-->
    <string name="facebook_app_id">862687143912512</string>
    <string name="fb_login_protocol_scheme">fb862687143912512</string>
    <string name="main_home">首頁</string>
    <string name="main_hot">熱門</string>
    <string name="main_tag">標籤</string>
    <string name="main_setting">設定</string>
    <string name="search_tag">搜尋主題標籤</string>
    <!--fringerprint-->
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="fingerprint_description">按壓您的指紋以登入</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="fingerprint_hint">指紋偵測中...</string>
    <string name="fingerprint_not_recognized">辨識錯誤，請再嘗試一次</string>
    <string name="fingerprint_success">辨識成功</string>
    <string name="sign_in">登入</string>
    <string name="use_fingerprint_to_authenticate_key">use_fingerprint_to_authenticate_key</string>
    <string name="cancel">取消</string>
    <string name="use_password">Use password</string>
    <string name="ok">確認</string>
    <string name="purchase_done">Purchase successful</string>
    <string name="main_map">附近</string>
    <string name="action_suggestion">提出建議</string>
    <string name="action_score">給個評分</string>
    <string name="main_about">關於</string>
    <string name="title_activity_near_by">NearBy</string>
</resources>
