<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home"
            android:title="@string/main_home" />
        <item
            android:id="@+id/nav_hot"
            android:icon="@mipmap/ic_fire"
            android:title="@string/main_hot" />
        <item
            android:id="@+id/nav_nearby"
            android:icon="@mipmap/ic_map"
            android:title="@string/main_map" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@mipmap/ic_setting"
            android:title="@string/main_setting" />
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/ic_about"
            android:title="@string/main_about" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="分享" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="傳送" />
        </menu>
    </item>

</menu>
